--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dorian Karter",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "socket.io": "^1.3.7"
   }
