--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "Dorian Karter",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^0.8.5",
+    "body-parser": "^1.14.1",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "pg": "^4.4.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.14.1",
     "socket.io": "^1.3.7"
   }
 }
