--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DB_HOST=localhost
-DB_USER=username
-DB_PASSWORD=password
+DB_NAME=pasteur_development
+DB_USER=
+DB_ADAPTER_SEQUELIZE=postgres
+DB_PASSWORD=
